refactor: (#565) 컨벤션 수정 및 dto 정적 팩터리 메서드 적용